# ssm-installer

./: README.md
attach-iam-to-ec2/: README.md  main.tf  terraform.tfvars  variables.tf
attach-iam-to-ec2/policies/: ssmquicksetup.json  ssmtrustpolicy.json
install-ssm-playbook/: README.md  ansible.cfg  playbook.yml
install-ssm-playbook/inventory/: hosts.yml
list-ec2-ssm-state/: README.md  pyproject.toml
list-ec2-ssm-state/src/: main.py
