[tool.poetry]
name = "2911"
version = "0.1.0"
description = "Checks the SSM Agent installation status in every EC2 instance of an AWS Account."
authors = ["Mandic <mandic@mandic.net.br>"]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.15.10"


[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = {version = "^20.8b1", allow-prereleases = true}
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
